[package]
name = "eloratings"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
dotenv = "0.15.0"
futures = "0.3.15"
reqwest = {version = "0.11.4", default-features = false}
sqlx = {version = "0.5.5", default-features = false, features = ["macros", "offline", "runtime-tokio-rustls", "sqlite"]}
tokio = {version = "1.7.1", default-features = false, features = ["macros", "rt-multi-thread"]}
